Armitage Changelog
==================

In Progress
---------
- Updated meterpreter shell and command shell console to honor your set
  preferences. I forgot to pass $preferences to the console constructor. Doh!

13 Dec 10 Changes
---------

- Added Meterpreter -> Browse -> Webcam Shot to grab webcam snap shots.
- You may now click the image in the webcam/screenshot view to save it.
- Workspace -> Create menu now automatically switches you to the net workspace.
- UNIX shell sessions now have an Upload... menu. This item will open a local
  file and use the printf command on the remote host to put it together. It's 
  slow but it works. 
- Removed the rename file menu item from the file browser. It turns out I had 
  my Windows command shell vs. meterpreter command interface crossed. The 
  command doesn't exist in Meterpreter.
- Upload button now waits until file is uploaded to refresh file listing
- Added Timestomp item to File Browser popup menu. This works like a clipboard.
  Select Get MACE to capture the MACE values of the current file. Use Set MACE
  on another file to set the MACE values to the currently known attributes.
- Dump hashes menu item no longer pulls up a new credentials tab. 
- Added a Refresh button to the credentials tab.
- Updated db refresh code to be a little smarter about when it needs to merge
  db_notes hints into the MSF database.

6 Dec 10 Changes
--------

- added -y filename.yml command line option for specifying a YAML file with
  database parameters
- updated "Start MSF" to launch "ruby msfrpcd" on Windows. This requires the 
  current working directory of Armitage be set to the Metasploit base directory.
- jobs view now parses job output with only 3 columns of information.
- connect dialog is now centered on your screen when you start Armitage
- Armitage now saves your settings when you use Start MSF.
- Armitage now forces cells in editor mode to save before launching a module or